agregando autenticacion OAuth2 con GitHub

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.password=Root123#
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto=create
 server.port=8080
+spring.security.oauth2.client.registration.github.clientId= 22806545559f7f949a2d
+spring.security.oauth2.client.registration.github.clientSecret= fb71ef11873b39d8a871586e24bd87d379670c71
